# ros_object_pose_utils

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
bundles/: training_all_mat.xml  training_mat.xml
camera_info/: iphone_camera_info.yaml
cfg/: ObjectMasker.cfg
configs/: asus_surgical_config01.xml  iphone_surgical_config.xml
launch/: ar_track_individual.launch  asus_segmentation.launch  asus_segmentation_tagged.launch  coco_folder_segmentation.launch  depth_to_point_cloud.launch  image_folder_individual.launch  image_folder_seg.launch  image_folder_track_bundle.launch  image_folder_track_individual.launch  image_folder_train.launch  play_image_folder.launch  single_image_publish.launch  single_image_track_bundle.launch  tagged_masker_surgical_config01.launch  track_boarder_no_depth.launch
rviz/: ar_segmentation.rviz  ar_segmentation_tagged.rviz
scripts/: annotate_folder.py  combine_annotations  make_coco_visual_dict.py  mask_classes_folder.py  mask_image  object_masker  tagged_object_masker  transform_model.py
src/: ar_ransac.py  image_publisher.py  object_masker.py
src/object_pose_utils/: __init__.py  feature_classification.py  mask_image.py  object_masker.py  object_masker_node.py  tagged_object_masker.py
test/: test_object_masker.py  test_tagged_object_masker.py
