<package>
  <name>object_pose_utils</name>
  <version>0.0.1</version>
  <description>
    Ground truths image datasets with object poses
  </description>
  <maintainer email="bokorn@andrew.cmu.edu">Brian Okorn</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  
</package>
